5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1577_994.log
== TEST (2019-03-14 19:09:23) 
-- CODE:
print(Universidade Federal do Amazonas)
-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:10:35) 
-- CODE:
print("")
a=Universidade
b=Federal
c=do
d=Amazonas
print(a+b+c+d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=Universidade
NameError: name 'Universidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:10:46) 
-- CODE:
print("")
a=universidade
b=Federal
c=do
d=Amazonas
print(a+b+c+d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=universidade
NameError: name 'universidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:11:28) 
-- CODE:
print("")
a=universidade
b=federal
c=do
d=amazonas
print(a+b+c+d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    a=universidade
NameError: name 'universidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:12:51) 
-- CODE:
print("Universidade Federal do Amazonas")

-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:13:35) 
-- CODE:
print("Universidade Federal do Amazonas")
print(258383746476+27626345634545456)
-- OUTPUT:
Universidade Federal do Amazonas
27626604018291932
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:23:02) 
-- CODE:
print("Universidade Federal do Amazonas")
		print()
-- EXECUTION TIME:
0.217238
-- ERROR:
  File "/home/codebench/codes/1577/994/main.py", line 2
    print()
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:23:06) 
-- CODE:
print("Universidade Federal do Amazonas")
		print()
-- ERROR:
File "XXXX", line 2
    print()
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:23:11) 
-- CODE:
print("Universidade Federal do Amazonas")
		
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:23:14) 
-- CODE:
print("Universidade Federal do Amazonas")
		
-- EXECUTION TIME:
0.157172
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
